RAG chunking strategies

--- a/Lesson 00.ipynb
+++ b/Lesson 00.ipynb
@@ -243,10 +243,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f4973144-7c63-45e0-8619-5ff8a1bcd3ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SERVICE    STATE     PORTS\n",
+      "chunking   running   0.0.0.0:5005->5005/tcp, :::5005->5005/tcp\n",
+      "judge      running   0.0.0.0:5007->5007/tcp, :::5007->5007/tcp\n",
+      "mixtral    running   0.0.0.0:9998-9999->9998-9999/tcp, :::9998-9999->9998-9999/tcp\n",
+      "redis      running   6379/tcp, 8001/tcp\n",
+      "router     running   0.0.0.0:5006->5006/tcp, :::5006->5006/tcp\n",
+      "triton     running   0.0.0.0:8000-8002->8000-8002/tcp, :::8000-8002->8000-8002/tcp\n",
+      "web        running   0.0.0.0:5000->5000/tcp, :::5000->5000/tcp\n"
+     ]
+    }
+   ],
    "source": [
     "docker-compose ps --format \"table {{.Service}}\\t{{.State}}\\t{{.Ports}}\""
    ]
@@ -277,24 +292,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fdb80b6d-a60b-43be-a6c9-072210c1af41",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36mchunking-1  | \u001b[0mINFO:     Started server process [7]\n",
+      "\u001b[36mchunking-1  | \u001b[0mINFO:     Waiting for application startup.\n",
+      "\u001b[36mchunking-1  | \u001b[0mINFO:     Application startup complete.\n",
+      "\u001b[36mchunking-1  | \u001b[0mINFO:     Uvicorn running on http://0.0.0.0:5005 (Press CTRL+C to quit)\n",
+      "\u001b[36mchunking-1  | \u001b[0mINFO:     108.31.235.14:49205 - \"GET / HTTP/1.1\" 307 Temporary Redirect\n",
+      "\u001b[36mchunking-1  | \u001b[0mINFO:     108.31.235.14:49205 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "\u001b[36mchunking-1  | \u001b[0mINFO:     108.31.235.14:49205 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "\u001b[36mchunking-1  | \u001b[0mINFO:     172.19.0.2:38518 - \"POST /api/chunking HTTP/1.1\" 200 OK\n",
+      "\u001b[36mchunking-1  | \u001b[0mINFO:     172.19.0.2:35340 - \"POST /api/chunking HTTP/1.1\" 200 OK\n",
+      "\u001b[36mchunking-1  | \u001b[0mINFO:     172.19.0.2:42638 - \"POST /api/chunking HTTP/1.1\" 200 OK\n",
+      "\u001b[36mchunking-1  | \u001b[0mINFO:     172.19.0.2:52374 - \"POST /api/chunking HTTP/1.1\" 200 OK\n",
+      "\u001b[36mchunking-1  | \u001b[0mINFO:     172.19.0.2:46368 - \"POST /api/chunking HTTP/1.1\" 200 OK\n",
+      "\u001b[36mchunking-1  | \u001b[0mINFO:     172.19.0.2:40810 - \"POST /api/chunking HTTP/1.1\" 200 OK\n"
+     ]
+    }
+   ],
    "source": [
     "docker-compose logs chunking"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "aece2325-3286-47c6-98c6-585d26acfef5",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36mtriton-1  | \u001b[0m\n",
+      "\u001b[36mtriton-1  | \u001b[0m=============================\n",
+      "\u001b[36mtriton-1  | \u001b[0m== Triton Inference Server ==\n",
+      "\u001b[36mtriton-1  | \u001b[0m=============================\n",
+      "\u001b[36mtriton-1  | \u001b[0m\n",
+      "\u001b[36mtriton-1  | \u001b[0mNVIDIA Release 22.01 (build 31237563)\n",
+      "\u001b[36mtriton-1  | \u001b[0m\n",
+      "\u001b[36mtriton-1  | \u001b[0mCopyright (c) 2018-2021, NVIDIA CORPORATION & AFFILIATES.  All rights reserved.\n",
+      "\u001b[36mtriton-1  | \u001b[0m\n",
+      "\u001b[36mtriton-1  | \u001b[0mVarious files include modifications (c) NVIDIA CORPORATION.  All rights reserved.\n",
+      "\u001b[36mtriton-1  | \u001b[0m\n",
+      "\u001b[36mtriton-1  | \u001b[0mThis container image and its contents are governed by the NVIDIA Deep Learning Container License.\n",
+      "\u001b[36mtriton-1  | \u001b[0mBy pulling and using the container, you accept the terms and conditions of this license:\n",
+      "\u001b[36mtriton-1  | \u001b[0mhttps://developer.nvidia.com/ngc/nvidia-deep-learning-container-license\n",
+      "\u001b[36mtriton-1  | \u001b[0m\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:38.813183 7 metrics.cc:298] Collecting metrics for GPU 0: NVIDIA A100 80GB PCIe\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.060123 7 libtorch.cc:1227] TRITONBACKEND_Initialize: pytorch\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.060151 7 libtorch.cc:1237] Triton TRITONBACKEND API version: 1.7\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.060155 7 libtorch.cc:1243] 'pytorch' TRITONBACKEND API version: 1.7\n",
+      "\u001b[36mtriton-1  | \u001b[0m2024-08-09 18:56:39.183804: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
+      "\u001b[36mtriton-1  | \u001b[0m2024-08-09 18:56:39.210363: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.210427 7 tensorflow.cc:2176] TRITONBACKEND_Initialize: tensorflow\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.210447 7 tensorflow.cc:2186] Triton TRITONBACKEND API version: 1.7\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.210452 7 tensorflow.cc:2192] 'tensorflow' TRITONBACKEND API version: 1.7\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.210455 7 tensorflow.cc:2216] backend configuration:\n",
+      "\u001b[36mtriton-1  | \u001b[0m{}\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.229269 7 onnxruntime.cc:2232] TRITONBACKEND_Initialize: onnxruntime\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.229287 7 onnxruntime.cc:2242] Triton TRITONBACKEND API version: 1.7\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.229291 7 onnxruntime.cc:2248] 'onnxruntime' TRITONBACKEND API version: 1.7\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.229293 7 onnxruntime.cc:2278] backend configuration:\n",
+      "\u001b[36mtriton-1  | \u001b[0m{}\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.244897 7 openvino.cc:1234] TRITONBACKEND_Initialize: openvino\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.244914 7 openvino.cc:1244] Triton TRITONBACKEND API version: 1.7\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.244918 7 openvino.cc:1250] 'openvino' TRITONBACKEND API version: 1.7\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.836720 7 pinned_memory_manager.cc:240] Pinned memory pool is created at '0x7fa42c000000' with size 268435456\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.839003 7 cuda_memory_manager.cc:105] CUDA memory pool is created on device 0 with size 67108864\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.846660 7 model_repository_manager.cc:994] loading: transformer_tensorrt_tokenize:1\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.946976 7 model_repository_manager.cc:994] loading: transformer_tensorrt_model:1\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:39.956843 7 python.cc:1897] TRITONBACKEND_ModelInstanceInitialize: transformer_tensorrt_tokenize_0 (GPU device 0)\n",
+      "\u001b[36mtriton-1  | \u001b[0mNone of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:43.793978 7 model_repository_manager.cc:1149] successfully loaded 'transformer_tensorrt_tokenize' version 1\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:43.794351 7 tensorrt.cc:5145] TRITONBACKEND_Initialize: tensorrt\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:43.794375 7 tensorrt.cc:5155] Triton TRITONBACKEND API version: 1.7\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:43.794382 7 tensorrt.cc:5161] 'tensorrt' TRITONBACKEND API version: 1.7\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:43.794463 7 tensorrt.cc:5204] backend configuration:\n",
+      "\u001b[36mtriton-1  | \u001b[0m{}\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:43.794493 7 tensorrt.cc:5256] TRITONBACKEND_ModelInitialize: transformer_tensorrt_model (version 1)\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:43.802906 7 tensorrt.cc:5305] TRITONBACKEND_ModelInstanceInitialize: transformer_tensorrt_model_0 (GPU device 0)\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:44.138965 7 logging.cc:49] [MemUsageChange] Init CUDA: CPU +714, GPU +0, now: CPU 3379, GPU 1435 (MiB)\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:44.879891 7 logging.cc:49] Loaded engine size: 1278 MiB\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:45.536626 7 logging.cc:49] [MemUsageChange] Init cuBLAS/cuBLASLt: CPU +1242, GPU +320, now: CPU 7818, GPU 2393 (MiB)\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:45.537013 7 logging.cc:49] [MemUsageChange] TensorRT-managed allocation in engine deserialization: CPU +0, GPU +637, now: CPU 0, GPU 637 (MiB)\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:45.544529 7 logging.cc:49] [MemUsageChange] Init cuBLAS/cuBLASLt: CPU +0, GPU +10, now: CPU 5262, GPU 2393 (MiB)\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:46.540611 7 logging.cc:49] [MemUsageChange] TensorRT-managed allocation in IExecutionContext creation: CPU +0, GPU +464, now: CPU 0, GPU 1101 (MiB)\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:46.540831 7 tensorrt.cc:1409] Created instance transformer_tensorrt_model_0 on GPU 0 with stream priority 0 and optimization profile default[0];\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:46.541228 7 model_repository_manager.cc:1149] successfully loaded 'transformer_tensorrt_model' version 1\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:46.541514 7 model_repository_manager.cc:994] loading: transformer_tensorrt_inference:1\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:46.641867 7 model_repository_manager.cc:1149] successfully loaded 'transformer_tensorrt_inference' version 1\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:46.641981 7 server.cc:519] \n",
+      "\u001b[36mtriton-1  | \u001b[0m+------------------+------+\n",
+      "\u001b[36mtriton-1  | \u001b[0m| Repository Agent | Path |\n",
+      "\u001b[36mtriton-1  | \u001b[0m+------------------+------+\n",
+      "\u001b[36mtriton-1  | \u001b[0m+------------------+------+\n",
+      "\u001b[36mtriton-1  | \u001b[0m\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:46.642055 7 server.cc:546] \n",
+      "\u001b[36mtriton-1  | \u001b[0m+-------------+-------------------------------------------------------------------------+--------+\n",
+      "\u001b[36mtriton-1  | \u001b[0m| Backend     | Path                                                                    | Config |\n",
+      "\u001b[36mtriton-1  | \u001b[0m+-------------+-------------------------------------------------------------------------+--------+\n",
+      "\u001b[36mtriton-1  | \u001b[0m| pytorch     | /opt/tritonserver/backends/pytorch/libtriton_pytorch.so                 | {}     |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| onnxruntime | /opt/tritonserver/backends/onnxruntime/libtriton_onnxruntime.so         | {}     |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| openvino    | /opt/tritonserver/backends/openvino_2021_2/libtriton_openvino_2021_2.so | {}     |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| tensorflow  | /opt/tritonserver/backends/tensorflow1/libtriton_tensorflow1.so         | {}     |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| python      | /opt/tritonserver/backends/python/libtriton_python.so                   | {}     |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| tensorrt    | /opt/tritonserver/backends/tensorrt/libtriton_tensorrt.so               | {}     |\n",
+      "\u001b[36mtriton-1  | \u001b[0m+-------------+-------------------------------------------------------------------------+--------+\n",
+      "\u001b[36mtriton-1  | \u001b[0m\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:46.642089 7 server.cc:589] \n",
+      "\u001b[36mtriton-1  | \u001b[0m+--------------------------------+---------+--------+\n",
+      "\u001b[36mtriton-1  | \u001b[0m| Model                          | Version | Status |\n",
+      "\u001b[36mtriton-1  | \u001b[0m+--------------------------------+---------+--------+\n",
+      "\u001b[36mtriton-1  | \u001b[0m| transformer_tensorrt_inference | 1       | READY  |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| transformer_tensorrt_model     | 1       | READY  |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| transformer_tensorrt_tokenize  | 1       | READY  |\n",
+      "\u001b[36mtriton-1  | \u001b[0m+--------------------------------+---------+--------+\n",
+      "\u001b[36mtriton-1  | \u001b[0m\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:46.642161 7 tritonserver.cc:1865] \n",
+      "\u001b[36mtriton-1  | \u001b[0m+----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "\u001b[36mtriton-1  | \u001b[0m| Option                           | Value                                                                                                                                                                                  |\n",
+      "\u001b[36mtriton-1  | \u001b[0m+----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "\u001b[36mtriton-1  | \u001b[0m| server_id                        | triton                                                                                                                                                                                 |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| server_version                   | 2.18.0                                                                                                                                                                                 |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| server_extensions                | classification sequence model_repository model_repository(unload_dependents) schedule_policy model_configuration system_shared_memory cuda_shared_memory binary_tensor_data statistics |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| model_repository_path[0]         | /models                                                                                                                                                                                |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| model_control_mode               | MODE_NONE                                                                                                                                                                              |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| strict_model_config              | 1                                                                                                                                                                                      |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| rate_limit                       | OFF                                                                                                                                                                                    |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| pinned_memory_pool_byte_size     | 268435456                                                                                                                                                                              |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| cuda_memory_pool_byte_size{0}    | 67108864                                                                                                                                                                               |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| response_cache_byte_size         | 0                                                                                                                                                                                      |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| min_supported_compute_capability | 6.0                                                                                                                                                                                    |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| strict_readiness                 | 1                                                                                                                                                                                      |\n",
+      "\u001b[36mtriton-1  | \u001b[0m| exit_timeout                     | 30                                                                                                                                                                                     |\n",
+      "\u001b[36mtriton-1  | \u001b[0m+----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "\u001b[36mtriton-1  | \u001b[0m\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:46.643902 7 grpc_server.cc:4195] Started GRPCInferenceService at 0.0.0.0:8001\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:46.644111 7 http_server.cc:2857] Started HTTPService at 0.0.0.0:8000\n",
+      "\u001b[36mtriton-1  | \u001b[0mI0809 18:56:46.687620 7 http_server.cc:167] Started Metrics Service at 0.0.0.0:8002\n",
+      "\u001b[36mtriton-1  | \u001b[0m[\u001b[1;31mERROR\u001b[0;39m] \u001b[33mevhtp.c:3119     \u001b[39m\u001b[94mODDITY, resuming when not paused?!?\u001b[39m :: \u001b[35m(errno: None)\u001b[39m\n",
+      "\u001b[36mtriton-1  | \u001b[0m[\u001b[1;31mERROR\u001b[0;39m] \u001b[33mevhtp.c:3119     \u001b[39m\u001b[94mODDITY, resuming when not paused?!?\u001b[39m :: \u001b[35m(errno: None)\u001b[39m\n"
+     ]
+    }
+   ],
    "source": [
     "docker-compose logs triton"
    ]
@@ -330,7 +481,15 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bringing containerized services down...\n"
+     ]
+    }
+   ],
    "source": [
     "./restart.sh"
    ]
